--- a/ShapeUp/index.html
+++ b/ShapeUp/index.html
@@ -31,7 +31,8 @@
                     <button id="triangle-btn" class="btn shape-button flex-item btn-dark">TRIANGLE</button>
                 </div>
             </div>
-
+            <div id="info-col-1" class="col-1 flex-item info-col" style="font-size: 0.5em"></div>
+            <div id="info-col-2" class="col-1 flex-item info-col" style="font-size: 0.5em"></div>
 
         </div>
 
@@ -77,7 +78,7 @@
 
 
         <div id="row3" class="row">
-            <div id="shape-canvas" class=></div>
+            <div id="shape-canvas" style="position: relative;"></div>
         </div>
     </div>
 
