--- a/Async-Drills/index.html
+++ b/Async-Drills/index.html
@@ -15,6 +15,7 @@
     <div id="main-container" class="container">
         <button id="button1" class="btn">Button 1</button>
         <button id="button2" class="btn">Button 2</button>
+        <button id="button2" class="btn">Button 3</button>
 
     </div>
 
