Finished Async Drills Lab.

--- a/Async-Drills/index.html
+++ b/Async-Drills/index.html
@@ -26,15 +26,14 @@
             </div>
             <div id="column3" class="col-4 text-center">
                 <h4 id="column3-header" class='text-center w-100'>Promises</h4>
-                <button id="button4" class="btn m-2 w-100">Button4</button>
-                <button id="button5" class="btn m-2 w-100">Button5</button>
+                <button id="button4" class="btn m-2 w-100">orderFood()</button>
             </div>
 
         </div>
         <div id="row2" class="row">
                 <div id="column4" class="col-4 text-center">
                     <h4 id="column4-header" class='text-center w-100'>Chaining Promises</h4>
-                    <button id="button6" class="btn m-2 w-100">Button6</button>
+                    <button id="button5" class="btn m-2 w-100">startChain()</button>
                 </div>
     
             </div>
