About halfway done with promise chain.

--- a/Promising-Results/index.html
+++ b/Promising-Results/index.html
@@ -7,6 +7,12 @@
     <title>Async Math</title>
 </head>
 <body>
+
+
+
+
+
     <script src="async-math.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
