Finished Promising Results

--- a/Promising-Results/index.html
+++ b/Promising-Results/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Async Math</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 </head>
+
 <body>
 
+    <div id="main-container" class="container">
+        <div id="row1" class="row">
+            <h2 id="top-banner" class="w-100 m-4 text-center">Slow Math</h2>
+        </div>
+        <div id="row2" class="row d-flex justify-content-center">
+            <button id="button-1" class="btn flex-item btn-dark">Start The Chain</button>
+        </div>
+        <div id="row2" class="row d-flex justify-content-center">
+            <div id="mid-col" class="col6">
+                <div id="banner-wrapper" class="text-center">
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
-
-
+    <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
     <script src="async-math.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
