Added a progress bar for the promise chain.

--- a/Promising-Results/index.html
+++ b/Promising-Results/index.html
@@ -19,11 +19,14 @@
         <div id="row2" class="row d-flex justify-content-center">
             <button id="button-1" class="btn flex-item btn-dark">Start The Chain</button>
         </div>
-        <div id="row2" class="row d-flex justify-content-center">
+        <div id="row3" class="row d-flex justify-content-center" style="height: 60px">
             <div id="mid-col" class="col6">
-                <div id="banner-wrapper" class="text-center">
-
-                </div>
+                <div id="banner-wrapper" class="text-center"></div>
+            </div>
+        </div>
+        <div id="row4" class="row d-flex justify-content-center" style="height: 30px">
+            <div id="prog-bar-wrapper" class="wrapper w-50 bg-dark p-2" style='border-radius: 1rem'>
+                <progress id='prog-bar-1' class="progress h-100"></progress>
             </div>
         </div>
 
